z-index issues

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -309,7 +309,7 @@
         }
 
         &.btn-arrow-down {
-            padding-right: 60px;
+            padding-right: 50px;
 
             i, svg {
                 @include v-c;
