--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -54,7 +54,7 @@
         left: 0;
         right: 0;
         width: 100%;
-        z-index: 1075;
+        z-index: 1035;
 
         &.js-is-sticky,
         &.js-is-sticky--change,
